Corrected text-align: -none- to -left-

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -536,7 +536,7 @@ body {
 }
 @media screen and (min-width: 768px) {
   .card__header {
-    text-align: none;
+    text-align: left;
   }
 }
 .card__info {
