--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -49,7 +49,7 @@
     text-align: center;
 
     @include tablet {
-      text-align: none;
+      text-align: left;
     }
   }
   &__info {
